samples/_failures_safe/1761296110_2f61cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5def92d.c: In function ‘main’:
./samples/SAFE/__tmp_e5def92d.c:158:13: error: expected expression at end of input
  158 |             fprintf(stderr,
      |             ^~~~~~~
./samples/SAFE/__tmp_e5def92d.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e5def92d.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e5def92d.c:158:13: error: expected declaration or statement at end of input
